# solana-vanity

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: setup.sh
src/: lib.rs  main.rs
