[package]
name = "solana-vanity"
version = "0.1.0"
edition = "2021"
description = "A CLI for generating Solana vanity addresses."
authors = ["Bruno"]
license = "MIT"
repository = "https://github.com/brunocordioli072/solana-vanity"

[dependencies]
solana-sdk = "2.1.1"
bs58 = "0.5.1"
rayon = "1.9"
clap = { version = "4.0", features = ["derive"] }
num_cpus = "1.17.0"
base64 = "0.22.1"
zerocopy = "0.8.26"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
